<resources>
    <string name="app_name">MattCV</string>

    <string name="tab_title_profile">Profile</string>
    <string name="tab_title_skills">Skills</string>
    <string name="tab_title_experience">Experience</string>

    <string name="content_description_profile_image">Profile image</string>

    <string name="label_phone_number">Phone number</string>
    <string name="label_email">Email</string>
    <string name="label_linked_in">LinkedIn</string>
    <string name="label_visa_status">Visa Status</string>
    <string name="label_availability">Availability</string>
</resources>
