<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        tools:context=".view.ProfileFragment">

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.ProgressBar.Large"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
            android:id="@+id/imageProfile"
            android:contentDescription="@string/content_description_profile_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHorizontal_bias="0.0"/>

    <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHorizontal_bias="1.0"
            tools:ignore="RtlSymmetry">

        <TextView
                android:id="@+id/textName"
                android:layout_width="match_parent"
                tools:text="John Smith"
                android:textSize="@dimen/text_size_profile_name"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/textProfile"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_profile_summary"
                tools:text="The quick brown fox jumps over the lazy dog"
                android:layout_height="0dp"/>
    </LinearLayout>

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:columnCount="2"
            android:rowCount="5"
            android:layout_marginTop="@dimen/margin_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageProfile">

        <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:layout_marginEnd="@dimen/table_spacing"
                android:text="@string/label_phone_number"
                android:textSize="@dimen/text_size_profile_table"/>

        <TextView
                android:id="@+id/textPhoneNumber"
                android:layout_column="1"
                android:layout_row="0"
                android:textSize="@dimen/text_size_profile_table"
                tools:text="07455935957"/>

        <TextView
                android:layout_column="0"
                android:layout_row="1"
                android:layout_marginEnd="@dimen/table_spacing"
                android:text="@string/label_email"
                android:textSize="@dimen/text_size_profile_table"/>

        <TextView
                android:id="@+id/textEmail"
                android:layout_column="1"
                android:layout_row="1"
                android:textSize="@dimen/text_size_profile_table"
                tools:text="matt@nomaditas.com"/>

        <TextView
                android:layout_column="0"
                android:layout_row="2"
                android:layout_marginEnd="@dimen/table_spacing"
                android:text="@string/label_linked_in"
                android:textSize="@dimen/text_size_profile_table"/>

        <TextView
                android:id="@+id/textLinkedIn"
                android:layout_column="1"
                android:layout_row="2"
                android:textSize="@dimen/text_size_profile_table"
                tools:text="matt@nomaditas.com"/>

        <TextView
                android:layout_column="0"
                android:layout_row="3"
                android:layout_marginEnd="@dimen/table_spacing"
                android:text="@string/label_visa_status"
                android:textSize="@dimen/text_size_profile_table"/>

        <TextView
                android:id="@+id/textVisaStatus"
                android:layout_column="1"
                android:layout_row="3"
                android:textSize="@dimen/text_size_profile_table"
                tools:text="British citizen"/>

        <TextView
                android:layout_column="0"
                android:layout_row="4"
                android:layout_marginEnd="@dimen/table_spacing"
                android:text="@string/label_availability"
                android:textSize="@dimen/text_size_profile_table"/>

        <TextView
                android:id="@+id/textAvailability"
                android:layout_column="1"
                android:layout_row="4"
                android:textSize="@dimen/text_size_profile_table"
                tools:text="Immediate"/>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>